# video-processor

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.cache/clangd/index/: blur_filter.cpp.3D2EAE33781D7E4D.idx  blur_filter.h.17DC852B77873200.idx  config.h.74EAC6C2410310D8.idx  edge_detect_filter.cpp.247F63808507E931.idx  edge_detect_filter.h.5A4C0D9EA64D2563.idx  filter_base.h.361BCB51603BBCCE.idx  filter_factory.cpp.7C048A04EA551D5B.idx  filter_factory.h.281FD7058A4954A1.idx  filter_processor.cpp.6CB3B908E06BA374.idx  filter_processor.h.C04B9F30E8CE8E5B.idx  grayscale_filter.cpp.0504AEFB6378D0AE.idx  grayscale_filter.h.C02DFF7CC1BDAE8E.idx  main.cpp.B57B6E06C66B2D6B.idx  sharpen_filter.cpp.3CFFE04BBA5DA6C8.idx  sharpen_filter.h.D869BBD0A7ABAFA5.idx  test_filter_factory.cpp.FF6724F2386CE122.idx  video_processor.cpp.271550FD23F5EB27.idx  video_processor.h.EDEA434E007B7966.idx
config/: app_config.json
include/video_filter_service/: config.h
src/: CMakeLists.txt  main.cpp
src/filters/: blur_filter.cpp  blur_filter.h  edge_detect_filter.cpp  edge_detect_filter.h  filter_base.h  filter_factory.cpp  filter_factory.h  filter_processor.cpp  filter_processor.h  grayscale_filter.cpp  grayscale_filter.h  sharpen_filter.cpp  sharpen_filter.h
tests/: CMakeLists.txt  test_filter_factory.cpp  test_video_processor.cpp
